--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -181,80 +181,80 @@
   "into": "in",
   "Invalid password": "Password non valida",
   "Issue token amount": "Importo del token di emissione",
-  "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.",
-  "It seems like you made a mistake in the words' order. But don't worry, you can reorder the words by dragging them around.": "It seems like you made a mistake in the words' order. But don't worry, you can reorder the words by dragging them around.",
-  "Label": "Label",
-  "Language": "Language",
-  "Last 12 months": "Last 12 months",
-  "Last 24h": "Last 24h",
-  "Last 6 months": "Last 6 months",
-  "Last activity": "Last activity",
-  "Last month": "Last month",
-  "Last used": "Last used",
-  "Last week": "Last week",
-  "Latest transactions": "Latest transactions",
-  "Let's go!": "Let's go!",
-  "Light": "Light",
+  "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Sembra che il tuo portafoglio abbia troppi UTXO per poter inviare questa transazione. Per favore, consolida (unisci) prima i tuoi UTXO. Questo costerà una piccola tassa.",
+  "It seems like you made a mistake in the words' order. But don't worry, you can reorder the words by dragging them around.": "Sembra che tu abbia commesso un errore nell'ordine delle parole. Ma non preoccuparti, puoi riordinare le parole trascinandole in giro.",
+  "Label": "Etichetta",
+  "Language": "Lingua",
+  "Last 12 months": "Ultimi 12 mesi",
+  "Last 24h": "Ultime 24 ore",
+  "Last 6 months": "Ultimi 6 mesi",
+  "Last activity": "L'ultima attività",
+  "Last month": "Lo scorso mese",
+  "Last used": "Ultimo uso",
+  "Last week": "Settimana scorsa",
+  "Latest transactions": "Ultime transazioni",
+  "Let's go!": "Andiamo!",
+  "Light": "Chiaro",
   "Localhost": "Localhost",
-  "Lock": "Lock",
-  "Lock current wallet": "Lock current wallet",
-  "Lock time": "Lock time",
-  "Lock time must be in the future.": "Lock time must be in the future.",
-  "Lock wallet": "Lock wallet",
-  "Locked": "Locked",
-  "Locked ALPH balance": "Locked ALPH balance",
-  "lockTimeConfirmation": "You chose to lock the assets until <1>{{ datetime }}</1>. That is approximately <3>{{ inTimeFromNow }}</3> from now. Are you sure you want to lock the assets until then?",
+  "Lock": "Blocca",
+  "Lock current wallet": "Blocca il portafoglio corrente",
+  "Lock time": "Tempo di blocco",
+  "Lock time must be in the future.": "L'ora di blocco deve essere nel futuro.",
+  "Lock wallet": "Blocca il portafoglio",
+  "Locked": "Bloccato",
+  "Locked ALPH balance": "Saldo ALPH bloccato",
+  "lockTimeConfirmation": "Hai scelto di bloccare le risorse fino al <1>{{ datetime }}</1>. Questo è approssimativamente <3>{{ inTimeFromNow }}</3> da adesso. Sei sicuro di voler bloccare le risorse fino ad allora?",
   "Mainnet": "Mainnet",
-  "Make sure to always check what is the selected network before sending transactions.": "Make sure to always check what is the selected network before sending transactions.",
-  "Make sure to keep your password secured as it cannot be changed in the future.": "Make sure to keep your password secured as it cannot be changed in the future.",
-  "Make sure to store the words in a secure location! They are your wallet's secret recovery phrase.": "Make sure to store the words in a secure location! They are your wallet's secret recovery phrase.",
-  "Make this your default address": "Make this your default address",
-  "Mining Rewards": "Mining Rewards",
-  "Minutes": "Minutes",
-  "More info": "More info",
-  "More options": "More options",
-  "More to come...": "More to come...",
-  "Moved": "Moved",
-  "Name": "Name",
-  "Network": "Network",
-  "Network ID": "Network ID",
-  "Networks": "Networks",
-  "Never disclose this key.": "Never disclose this key.",
-  "Never used": "Never used",
-  "New address": "New address",
-  "New contact": "New contact",
-  "New password": "New password",
-  "New version": "New version",
-  "New wallet": "New wallet",
-  "New wallet name": "New wallet name",
-  "NFTs": "NFTs",
-  "No contacts found. You can create contacts in the Addresses page.": "No contacts found. You can create contacts in the Addresses page.",
-  "No options match the search criteria.": "No options match the search criteria.",
-  "No recovery phrase was stored along with this wallet": "No recovery phrase was stored along with this wallet",
-  "No transactions to display": "No transactions to display",
-  "Node host": "Node host",
-  "Not your keys, not your coins.": "Not your keys, not your coins.",
-  "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Note that if activated, \"{{ address }}\" will not be the default address anymore.",
-  "Number of transactions": "Number of transactions",
-  "Off": "Off",
-  "Official Wallet": "Official Wallet",
-  "Open in explorer": "Open in explorer",
-  "Open the advanced feature panel.": "Open the advanced feature panel.",
-  "Optional passphrase": "Optional passphrase",
-  "out from": "out from",
-  "Outputs": "Outputs",
-  "Overview": "Overview",
-  "Passphrases don't match": "Passphrases don't match",
-  "passphraseWarningMessage": "<0>This is an advanced feature!</0><br />Use it only if you know what you are doing.<br />Please, read our <5>documentation</5> to learn about it.",
+  "Make sure to always check what is the selected network before sending transactions.": "Assicurati di controllare sempre qual è la rete selezionata prima di inviare transazioni.",
+  "Make sure to keep your password secured as it cannot be changed in the future.": "Assicurati di mantenere la tua password protetta in quanto non può essere modificata in futuro.",
+  "Make sure to store the words in a secure location! They are your wallet's secret recovery phrase.": "Assicurati di conservare le parole in un luogo sicuro! Sono la frase segreta di recupero del tuo portafoglio.",
+  "Make this your default address": "Rendi questo il tuo indirizzo predefinito",
+  "Mining Rewards": "Ricompense Minerarie",
+  "Minutes": "Minuti",
+  "More info": "Ulteriori informazioni",
+  "More options": "Più opzioni",
+  "More to come...": "E c'è dell'altro...",
+  "Moved": "Mosso",
+  "Name": "Nome",
+  "Network": "Rete",
+  "Network ID": "ID di Rete",
+  "Networks": "Reti",
+  "Never disclose this key.": "Non rivelare mai questa chiave.",
+  "Never used": "Mai usato",
+  "New address": "Nuovo indirizzo",
+  "New contact": "Nuovo contatto",
+  "New password": "Nuova password",
+  "New version": "Nuova versione",
+  "New wallet": "Nuovo portafoglio",
+  "New wallet name": "Nuovo nome del portafoglio",
+  "NFTs": "NFT",
+  "No contacts found. You can create contacts in the Addresses page.": "Nessun contatto trovato. Puoi creare contatti nella pagina Indirizzi.",
+  "No options match the search criteria.": "Nessuna opzione corrisponde ai criteri di ricerca.",
+  "No recovery phrase was stored along with this wallet": "Nessuna frase di recupero è stata memorizzata insieme a questo portafoglio",
+  "No transactions to display": "Nessuna transazione da visualizzare",
+  "Node host": "Host del Nodo",
+  "Not your keys, not your coins.": "Non le tue chiavi, non le tue monete.",
+  "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Si noti che se attivato, \"{{ address }}\" non sarà più l'indirizzo predefinito.",
+  "Number of transactions": "Numero di transazioni",
+  "Off": "Spento",
+  "Official Wallet": "Portafoglio Ufficiale",
+  "Open in explorer": "Apri nell'esploratore",
+  "Open the advanced feature panel.": "Apri il pannello delle funzionalità avanzate.",
+  "Optional passphrase": "Frase di accesso facoltativa",
+  "out from": "fuori da",
+  "Outputs": "Uscite",
+  "Overview": "Panoramica",
+  "Passphrases don't match": "Le passphrase non corrispondono",
+  "passphraseWarningMessage": "<0>Questa è una funzionalità avanzata!</0><br />Usalo solo se sai cosa stai facendo.<br />Per favore, leggi la nostra <5>documentazione</5> per saperne di più.",
   "Password": "Password",
-  "Password Check": "Password Check",
-  "Password is too weak": "Password is too weak",
-  "Password requirement": "Password requirement",
-  "Passwords are different": "Passwords are different",
-  "Paste WalletConnect URI copied from the dApp": "Paste WalletConnect URI copied from the dApp",
-  "Pending": "Pending",
-  "Period": "Period",
-  "Pick a color": "Pick a color",
+  "Password Check": "Controllo Password",
+  "Password is too weak": "La password è troppo debole",
+  "Password requirement": "Requisito della password",
+  "Passwords are different": "Le password sono diverse",
+  "Paste WalletConnect URI copied from the dApp": "Incolla l'URI WalletConnect copiato dalla dApp",
+  "Pending": "In Attesa",
+  "Period": "Periodo",
+  "Pick a color": "Scegli un colore",
   "Please choose whether you want to create a new wallet or import an existing one.": "Please choose whether you want to create a new wallet or import an existing one.",
   "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.": "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.",
   "Please review the following before authorizing the dApp": "Please review the following before authorizing the dApp",
