--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -447,5 +447,7 @@
   "Address keys export": "Esportazione delle chiavi degli indirizzi",
   "Public key copied.": "Chiave pubblica copiata.",
   "Could not copy public key.": "Impossibile copiare la chiave pubblica.",
-  "Copy the keys of an address.": "Copiare le chiavi di un indirizzo."
+  "Copy the keys of an address.": "Copiare le chiavi di un indirizzo.",
+  "Transaction hash": "Hash di transazione",
+  "Copy hash": "Copia l'hash"
 }
