Export address and contact metadata in QR code
Related to #183

--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -288,7 +288,7 @@
   "Review": "Vérification",
   "Save": "Sauvegarder",
   "Scan the blockchain for addresses you used in the past.": "Scannez la blockchain pour trouver des adresses utilisées par le passé.",
-  "Scan this QR code with your mobile wallet.": "Scannez ce code QR avec votre portefeuille mobile.",
+  "Scan this animated QR code with your mobile wallet.": "Scan this animated QR code with your mobile wallet.",
   "Search": "Chercher",
   "Search for label, a hash or an asset...": "Cherchez un label, un hash ou un actif...",
   "Search for name or a hash...": "Cherchez un nom ou un hash...",
