--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -288,7 +288,7 @@
   "Review": "Xem lại",
   "Save": "Lưu lại",
   "Scan the blockchain for addresses you used in the past.": "Quét các địa chỉ trên blockchain mà bạn đã sử dụng trước đó.",
-  "Scan this QR code with your mobile wallet.": "Quét mã QR này bằng điện thoại của bạn.",
+  "Scan this animated QR code with your mobile wallet.": "Scan this animated QR code with your mobile wallet.",
   "Search": "Tìm kiếm",
   "Search for label, a hash or an asset...": "Tìm theo nhãn, hash hoặc tài sản...",
   "Search for name or a hash...": "Tìm theo tên hoặc hash...",
