--- a/locales/es-ES/translation.json
+++ b/locales/es-ES/translation.json
@@ -288,7 +288,7 @@
   "Review": "Comprobar",
   "Save": "Guardar",
   "Scan the blockchain for addresses you used in the past.": "Scan the blockchain for addresses you used in the past.",
-  "Scan this QR code with your mobile wallet.": "Scan this QR code with your mobile wallet.",
+  "Scan this animated QR code with your mobile wallet.": "Scan this animated QR code with your mobile wallet.",
   "Search": "Search",
   "Search for label, a hash or an asset...": "Search for label, a hash or an asset...",
   "Search for name or a hash...": "Search for name or a hash...",
