--- a/locales/id-ID/translation.json
+++ b/locales/id-ID/translation.json
@@ -288,7 +288,7 @@
   "Review": "Ulasan",
   "Save": "Simpan",
   "Scan the blockchain for addresses you used in the past.": "Pindai blockchain untuk alamat yang Anda gunakan sebelumnya.",
-  "Scan this QR code with your mobile wallet.": "Pindai kode QR ini dengan dompet seluler Anda.",
+  "Scan this animated QR code with your mobile wallet.": "Scan this animated QR code with your mobile wallet.",
   "Search": "Cari",
   "Search for label, a hash or an asset...": "Telusuri untuk label, hash, atau aset...",
   "Search for name or a hash...": "Telusuri untuk nama atau hash...",
