--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -288,7 +288,7 @@
   "Review": "Обзор",
   "Save": "Сохранить",
   "Scan the blockchain for addresses you used in the past.": "Просканируйте блокчейн на наличие адресов, которые вы использовали в прошлом.",
-  "Scan this animated QR code with your mobile wallet.": "Scan this animated QR code with your mobile wallet.",
+  "Scan this animated QR code with your mobile wallet.": "Отсканируйте этот анимированный QR-код с помощью своего мобильного кошелька.",
   "Search": "Найти",
   "Search for label, a hash or an asset...": "Поиск по имени, хэшу или активу...",
   "Search for name or a hash...": "Поиск по имени или хэшу...",
