--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -326,6 +326,7 @@
   "Show more": "Show more",
   "Show QR code": "Show QR code",
   "Show your secret recovery phrase": "Show your secret recovery phrase",
+  "Sign": "Sign",
   "Signer address": "Signer address",
   "Smart contract": "Smart contract",
   "Smart contracts": "Smart contracts",
@@ -398,6 +399,7 @@
   "Unlocked at": "Unlocked at",
   "Unlocks at": "Unlocks at",
   "Unselect all": "Unselect all",
+  "Unsigned transaction signed!": "Unsigned transaction signed!",
   "Update": "Update",
   "Use an existing wallet": "Use an existing wallet",
   "Use max amount": "Use max amount",
