--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -449,5 +449,7 @@
   "Could not copy public key.": "Impossible de copier la clé privée.",
   "Copy the keys of an address.": "Copier les clés d'une adresse.",
   "Transaction hash": "Hash de la transaction",
-  "Copy hash": "Copier le hash"
+  "Copy hash": "Copier le hash",
+  "Sign": "Sign",
+  "Unsigned transaction signed!": "Unsigned transaction signed!"
 }
