--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -266,7 +266,7 @@
   "Proxy port": "Porta proxy",
   "Raw amount": "Importo grezzo",
   "Ready!": "Pronto!",
-  "Receive": "Ricevere",
+  "Receive": "Ricevi",
   "Receive testnet tokens": "Ricevi token testnet",
   "Receive testnet tokens in your default address.": "Ricevi i token testnet nel tuo indirizzo predefinito.",
   "Received": "Ricevuto",
@@ -397,14 +397,14 @@
   "Unlocked at": "Sbloccato alle",
   "Unlocks at": "Sblocca alle",
   "Unselect all": "Deseleziona tutto",
-  "Update": "Aggiornamento",
+  "Update": "Aggiorna",
   "Use an existing wallet": "Usa un portafoglio esistente",
   "Use max amount": "Usa l'importo massimo",
   "Use optional passphrase": "Usa passphrase opzionale",
   "Useful for miners or DeFi use.": "Utile per minatori o uso DeFi.",
   "Value today": "Valore oggi",
   "Version": "Versione",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "Versione {{ newVersion }} è disponibile. Clic \"Update\" per evitare qualsiasi problema con il portafoglio.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "Versione {{ newVersion }} è disponibile. Clicca su \"Aggiorna\" per evitare qualsiasi problema con il portafoglio.",
   "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Versione {{ newVersion }} è disponibile. Per favore, scaricalo e installalo per evitare qualsiasi problema con il portafoglio.",
   "Wallet": "Portafoglio",
   "Wallet list": "Elenco portafogli",
