Russian translation update.

--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -25,7 +25,7 @@
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium не имеет доступа к вашему кошельку.\nВы единственный владелец.",
   "Alephium Logo": "Логотип Alephium",
-  "Alephium's services": "Alephium's services",
+  "Alephium's services": "Сервисы Alephium",
   "all": "все",
   "All good? Let's continue!": "Все хорошо? Продолжаем!",
   "All selected": "Все выбранные",
@@ -53,12 +53,12 @@
   "Call contract": "Вызов контракта",
   "Cancel": "Отмена",
   "Carefully note down the words! They are your wallet's secret recovery phrase.": "Внимательно запишите слова! Они являются секретной фразой восстановления вашего кошелька.",
-  "Change the currency to use to display amounts.": "Change the currency to use to display amounts.",
-  "Change the wallet language.": "Change the wallet language.",
+  "Change the currency to use to display amounts.": "Изменить валюту, в которой будут отображаться суммы.",
+  "Change the wallet language.": "Изменить язык кошелька.",
   "Change wallet name": "Изменить имя кошелька",
   "Check": "Проверить",
   "Choose a contact": "Выберите контакт",
-  "Click to deactivate discreet mode": "Click to deactivate discreet mode",
+  "Click to deactivate discreet mode": "Нажмите для отключения скрытого режима",
   "Click to see less": "Нажмите, чтобы увидеть меньше",
   "Click to see more": "Нажмите, чтобы увидеть больше",
   "Close": "Закрыть",
@@ -97,7 +97,7 @@
   "Could not save contact.": "Не удалось сохранить контакт.",
   "Could not save new wallet name.": "Не удалось сохранить новое имя кошелька.",
   "Create contacts to avoid mistakes when sending transactions!": "Создавайте контакты, чтобы избежать ошибок при совершении транзакций!",
-  "Currency": "Currency",
+  "Currency": "Валюта",
   "Current dApp connection details": "Данные текущего подключения dApp",
   "Current network": "Текущая сеть",
   "Current wallet": "Текущий кошелек",
@@ -113,7 +113,7 @@
   "Developer tools": "Инструменты разработчика",
   "Direction": "Путь",
   "Directions": "Пути",
-  "Disclaimer": "Disclaimer",
+  "Disclaimer": "Дисклеймер",
   "Disconnect": "Отключение",
   "Discover active addresses": "Обнаружить активные адреса",
   "Discreet mode": "Скрытый режим",
@@ -125,7 +125,7 @@
   "Edit": "Изменить",
   "Edit contact": "Редактирование контакта",
   "Enable developer tools": "Включить инструменты разработчика",
-  "Encountered error while calling the faucet.": "Encountered error while calling the faucet.",
+  "Encountered error while calling the faucet.": "Обнаружена ошибка при вызове крана.",
   "Encountered error while exporting your transactions.": "Возникла ошибка при экспорте ваших транзакций.",
   "Encountered error while synching your addresses' data.": "Возникла ошибка при синхронизации данных ваших адресов.",
   "Enter": "Ввести",
@@ -232,7 +232,7 @@
   "New wallet name": "Новое имя кошелька",
   "NFTs": "NFTs",
   "No contacts found. You can create contacts in the Addresses page.": "Контакты не найдены. Вы можете создать контакты на странице Адреса.",
-  "No NFTs found.": "No NFTs found.",
+  "No NFTs found.": "NFT не найдены.",
   "No options match the search criteria.": "Ни один параметр не соответствует критериям поиска.",
   "No recovery phrase was stored along with this wallet": "Никакая фраза восстановления не была сохранена для этого кошелька",
   "No transactions to display": "Транзакции для отображения отсутствуют",
@@ -271,8 +271,8 @@
   "Raw amount": "Необработанная сумма",
   "Ready!": "Готов!",
   "Receive": "Получить",
-  "Receive testnet tokens": "Receive testnet tokens",
-  "Receive testnet tokens in your default address.": "Receive testnet tokens in your default address.",
+  "Receive testnet tokens": "Получить токены тестовой сети",
+  "Receive testnet tokens in your default address.": "Получите токены тестовой сети на адрес по умолчанию.",
   "Received": "Получено",
   "Recipient's address": "Адрес получателя",
   "Refresh": "Обновить",
@@ -346,14 +346,14 @@
   "Tab navigation": "Вкладка навигации",
   "Tell us!": "Расскажите нам!",
   "Testnet": "Testnet",
-  "Testnet faucet": "Testnet faucet",
-  "Testnet tokens incoming.": "Testnet tokens incoming.",
+  "Testnet faucet": "Кран тестовой сети",
+  "Testnet tokens incoming.": "Токены тестовой сети поступают.",
   "The amount must be greater than {{ minAmount }}": "Сумма должна быть больше, чем {{ minAmount }}",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "Текущая сеть ({{ currentNetwork }}) не соответствует сети, запрошенной WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "Самый простой способ начать работу с Alephium.",
   "The group number will be automatically be appended to the addresses’ label.": "Номер группы будет автоматически добавлен к имени адреса.",
   "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "Группа ({{ addressGroup }}) выбранного адреса не совпадает с группой, требуемой ({{ walletConnectGroup }})",
-  "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.": "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.",
+  "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.": "Кошелек разработан на английском языке.<br />Переводы на другие языки предоставляются сообществом Alephium.<br />В случае сомнений всегда обращайтесь к английской версии.",
   "The wallet is offline.": "Кошелек находится в режиме оффлайн.",
   "Theme": "Тема",
   "There are no addresses in the required group: {{ group }}": "В требуемой группе нет адресов: {{ group }}",
@@ -402,7 +402,7 @@
   "Unlocked at": "Разблокирован в",
   "Unlocks at": "Разблокируется в",
   "Unselect all": "Отменить выбор",
-  "Unverified": "Unverified",
+  "Unverified": "Не проверено",
   "Update": "Обновить",
   "Use an existing wallet": "Использовать существующий кошелек",
   "Use max amount": "Использовать максимальную сумму",
@@ -411,7 +411,7 @@
   "Value today": "Стоимость на сегодня",
   "Version": "Версия",
   "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with the wallet.": "Версия {{ newVersion }} уже доступна. Нажмите, \"Обновить\", чтобы избежать проблем с кошельком.",
-  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with the wallet.": "Доступна версия {{ newVersion }}. Пожалуйста, скачайте и установите ее, чтобы избежать проблем с кошельком.",
   "Wallet": "Кошелек",
   "Wallet list": "Список кошельков",
   "Wallet name": "Имя кошелька",
@@ -427,29 +427,29 @@
   "welcomeScreenOneAddressPerGroupMessage": "Продвинутый пользователь: вы хотите начать с <1> одного адреса для группы для майнинга или DeFi?</1>",
   "welcomeScreenPassphraseMessage": "Если вы хотите использовать <1>passphrase</1>, заблокируйте только что созданный кошелек.",
   "with": "с",
-  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "В настоящее время вы подключены к сети {{ currentNetwork }}. Обязательно подключитесь к тестовой сети, чтобы увидеть свои токены.",
   "You can disable this confirmation step from the wallet settings.": "Вы можете отключить этот этап подтверждения в настройках кошелька.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "Вы можете загрузить историю транзакций по адресу за выбранный период времени. Это может быть полезно для налоговой отчетности.",
   "You have great ideas you want to share?": "У вас есть отличные идеи, которыми вы хотите поделиться?",
   "You have questions about transfers ? Click here!": "У вас есть вопросы о переводах? Нажмите здесь!",
-  "You have reached the maximum calls limit. Please try again in a few minutes.": "You have reached the maximum calls limit. Please try again in a few minutes.",
+  "You have reached the maximum calls limit. Please try again in a few minutes.": "Вы достигли максимального лимита вызовов. Пожалуйста, повторите попытку через несколько минут.",
   "You will not be able to recover your account with the private key!": "Вы не сможете восстановить свою учетную запись с помощью закрытого ключа!",
   "Your address": "Ваш адрес",
   "Your addresses": "Ваши адреса",
   "Your CSV file has been generated successfully.": "Ваш CSV-файл был успешно создан.",
   "Your CSV file is being compiled in the background.": "Ваш CSV-файл формируется в фоновом режиме.",
   "Your Wallet": "Ваш кошелек",
-  "{{ amount }} ALPH are added for UTXO spam prevention. Click here to know more.": "{{ amount }} ALPH are added for UTXO spam prevention. Click here to know more.",
-  "Address unknown tokens": "Address unknown tokens",
-  "Experimental": "Experimental",
-  "Public key": "Public key",
-  "Private key": "Private key",
-  "Address keys export": "Address keys export",
-  "Public key copied.": "Public key copied.",
-  "Could not copy public key.": "Could not copy public key.",
-  "Copy the keys of an address.": "Copy the keys of an address.",
-  "Transaction hash": "Transaction hash",
-  "Copy hash": "Copy hash",
-  "Sign": "Sign",
-  "Unsigned transaction signed!": "Unsigned transaction signed!"
+  "{{ amount }} ALPH are added for UTXO spam prevention. Click here to know more.": "{{ amount }} ALPH добавлено для предотвращения спама UTXO. Нажмите здесь, чтобы узнать больше.",
+  "Address unknown tokens": "Адрес неизвестных токенов",
+  "Experimental": "Экспериментально",
+  "Public key": "Открытый ключ",
+  "Private key": "Закрытый ключ",
+  "Address keys export": "Экспорт ключей адреса",
+  "Public key copied.": "Открытый ключ скопирован.",
+  "Could not copy public key.": "Не удалось скопировать открытый ключ.",
+  "Copy the keys of an address.": "Скопируйте ключи адреса.",
+  "Transaction hash": "Хэш транзакции",
+  "Copy hash": "Копировать хэш",
+  "Sign": "Подписать",
+  "Unsigned transaction signed!": "Неподписанная транзакция подписана!"
 }
