Manage multiple WalletConnect pairings
Closes #796

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -392,9 +392,9 @@
   "Unknown tokens": "Unknown tokens",
   "Unknown wallet name": "Unknown wallet name",
   "Unlock": "Unlock",
-  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Unlock a wallet to connect to dApp: {{ dAppName }}",
+  "Unlock a wallet to connect to dApp": "Unlock a wallet to connect to dApp",
   "Unlock a wallet to continue.": "Unlock a wallet to continue.",
-  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Unlock your wallet to connect to dApp: {{ dAppName }}",
+  "Unlock your wallet to connect to dApp": "Unlock your wallet to connect to dApp",
   "Unlock your wallet to continue.": "Unlock your wallet to continue.",
   "Unlocked at": "Unlocked at",
   "Unlocks at": "Unlocks at",
@@ -451,5 +451,16 @@
   "Could not copy public key.": "Could not copy public key.",
   "Copy the keys of an address.": "Copy the keys of an address.",
   "Transaction hash": "Transaction hash",
-  "Copy hash": "Copy hash"
+  "Copy hash": "Copy hash",
+  "Could not find chain requirements in WalletConnect proposal": "Could not find chain requirements in WalletConnect proposal",
+  "Decline": "Decline",
+  "Switch network": "Switch network",
+  "Generate new address": "Generate new address",
+  "Connect with address": "Connect with address",
+  "Select an address to connect with.": "Select an address to connect with.",
+  "Accept": "Accept",
+  "walletConnectProposalMessage": "Connect to <1>{{ dAppUrl }}</1> with one of your addresses:",
+  "walletConnectProposalMessageWithGroup": "Connect to <1>{{ dAppUrl }}</1> with one of your addresses in group <3>{{ group }}</3>:",
+  "Active dApp connections": "Active dApp connections",
+  "Connect to {{ dAppUrl }}": "Connect to {{ dAppUrl }}"
 }
