--- a/locales/es-ES/translation.json
+++ b/locales/es-ES/translation.json
@@ -395,9 +395,9 @@
   "Unknown tokens": "Unknown tokens",
   "Unknown wallet name": "Nombre de billetera desconocida",
   "Unlock": "Unlock",
-  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Unlock a wallet to connect to dApp: {{ dAppName }}",
+  "Unlock a wallet to connect to dApp": "Unlock a wallet to connect to dApp",
   "Unlock a wallet to continue.": "Unlock a wallet to continue.",
-  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Unlock your wallet to connect to dApp: {{ dAppName }}",
+  "Unlock your wallet to connect to dApp": "Unlock your wallet to connect to dApp",
   "Unlock your wallet to continue.": "Unlock your wallet to continue.",
   "Unlocked at": "Desbloqueado en",
   "Unlocks at": "Se desbloquea en",
