--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -395,9 +395,9 @@
   "Unknown tokens": "Jetons inconnus",
   "Unknown wallet name": "Nom de portefeuille inconnu",
   "Unlock": "Déverrouiller",
-  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Déverrouillez un portefeuille pour vous connectez à la dApp: {{ dAppName }}",
+  "Unlock a wallet to connect to dApp": "Déverrouillez un portefeuille pour vous connectez à la dApp",
   "Unlock a wallet to continue.": "Déverrouillez un portefeuille pour continuer.",
-  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Déverrouillez votre portefeuille pour vous connectez à la dApp: {{ dAppName }}",
+  "Unlock your wallet to connect to dApp": "Déverrouillez votre portefeuille pour vous connectez à la dApp",
   "Unlock your wallet to continue.": "Déverrouillez votre portefeuille pour continuer.",
   "Unlocked at": "Déverrouillé à",
   "Unlocks at": "Sera déverrouillé à",
