--- a/locales/id-ID/translation.json
+++ b/locales/id-ID/translation.json
@@ -395,9 +395,9 @@
   "Unknown tokens": "Token tidak dikenal",
   "Unknown wallet name": "Nama dompet tidak dikenal",
   "Unlock": "Buka Kunci",
-  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Buka kunci dompet untuk terhubung ke dApp: {{ dAppName }}",
+  "Unlock a wallet to connect to dApp": "Buka kunci dompet untuk terhubung ke dApp",
   "Unlock a wallet to continue.": "Buka kunci dompet untuk melanjutkan.",
-  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Buka kunci dompet untuk terhubung ke dApp: {{ dAppName }}",
+  "Unlock your wallet to connect to dApp": "Buka kunci dompet untuk terhubung ke dApp",
   "Unlock your wallet to continue.": "Buka kunci dompet untuk melanjutkan.",
   "Unlocked at": "Tidak terkunci pada",
   "Unlocks at": "Buka kunci di",
