--- a/locales/it-IT/translation.json
+++ b/locales/it-IT/translation.json
@@ -390,9 +390,9 @@
   "Unknown tokens": "Gettoni sconosciuti",
   "Unknown wallet name": "Nome portafoglio sconosciuto",
   "Unlock": "Sbloccare",
-  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Sblocca un portafoglio per connetterti a dApp: {{ dAppName }}",
+  "Unlock a wallet to connect to dApp": "Sblocca un portafoglio per connetterti a dApp",
   "Unlock a wallet to continue.": "Sblocca un portafoglio per continuare.",
-  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Sblocca il tuo portafoglio per connetterti alla dApp: {{ dAppName }}",
+  "Unlock your wallet to connect to dApp": "Sblocca il tuo portafoglio per connetterti alla dApp",
   "Unlock your wallet to continue.": "Sblocca il portafoglio per continuare.",
   "Unlocked at": "Sbloccato alle",
   "Unlocks at": "Sblocca alle",
