--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -395,9 +395,9 @@
   "Unknown tokens": "Неизвестные токены",
   "Unknown wallet name": "Неизвестное имя кошелька",
   "Unlock": "Разблокировать",
-  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Разблокируйте кошелек, чтобы подключиться к dApp: {{ dAppName }}",
+  "Unlock a wallet to connect to dApp": "Разблокируйте кошелек, чтобы подключиться к dApp",
   "Unlock a wallet to continue.": "Разблокируйте кошелек, чтобы продолжить.",
-  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Разблокируйте свой кошелек, чтобы подключиться к dApp: {{ dAppName }}",
+  "Unlock your wallet to connect to dApp": "Разблокируйте свой кошелек, чтобы подключиться к dApp",
   "Unlock your wallet to continue.": "Разблокируйте свой кошелек, чтобы продолжить.",
   "Unlocked at": "Разблокирован в",
   "Unlocks at": "Разблокируется в",
