--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -395,9 +395,9 @@
   "Unknown tokens": "Unknown tokens",
   "Unknown wallet name": "Bilinmeyen adres ismi",
   "Unlock": "Unlock",
-  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Unlock a wallet to connect to dApp: {{ dAppName }}",
+  "Unlock a wallet to connect to dApp": "Unlock a wallet to connect to dApp",
   "Unlock a wallet to continue.": "Unlock a wallet to continue.",
-  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Unlock your wallet to connect to dApp: {{ dAppName }}",
+  "Unlock your wallet to connect to dApp": "Unlock your wallet to connect to dApp",
   "Unlock your wallet to continue.": "Unlock your wallet to continue.",
   "Unlocked at": "Kilidi açıldı",
   "Unlocks at": "Kilidi açılır",
