--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -395,9 +395,9 @@
   "Unknown tokens": "Các token không xác định",
   "Unknown wallet name": "Tên ví không xác định",
   "Unlock": "Mở khoá",
-  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Đăng nhập vào một ví để kết nối đến dApp: {{ dAppName }}",
+  "Unlock a wallet to connect to dApp": "Đăng nhập vào một ví để kết nối đến dApp",
   "Unlock a wallet to continue.": "Đăng nhập vào một ví để tiếp tục.",
-  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Đăng nhập vào ví của bạn để kết nối đến dApp: {{ dAppName }}",
+  "Unlock your wallet to connect to dApp": "Đăng nhập vào ví của bạn để kết nối đến dApp",
   "Unlock your wallet to continue.": "Đăng nhập vào ví của bạn để tiếp tục.",
   "Unlocked at": "Đã khoá tại",
   "Unlocks at": "Mở khoá tại",
