--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -395,9 +395,9 @@
   "Unknown tokens": "Unknown tokens",
   "Unknown wallet name": "Nome de carteira desconhecida",
   "Unlock": "Unlock",
-  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Unlock a wallet to connect to dApp: {{ dAppName }}",
+  "Unlock a wallet to connect to dApp": "Unlock a wallet to connect to dApp",
   "Unlock a wallet to continue.": "Unlock a wallet to continue.",
-  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Unlock your wallet to connect to dApp: {{ dAppName }}",
+  "Unlock your wallet to connect to dApp": "Unlock your wallet to connect to dApp",
   "Unlock your wallet to continue.": "Unlock your wallet to continue.",
   "Unlocked at": "Desbloqueado em",
   "Unlocks at": "Desbloqueia em",
